@@ -168,7 +168,6 @@
             data="crateProcessData" 
             showXAxis="true"
             showYAxis="true"
-            stacked="true"
             showLegend="true"
             height="100"
             forcey="[0,100]"
